--- a/index.html
+++ b/index.html
@@ -1,13 +1,74 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./style.css" />
-    <title>Acme App</title>
-  </head>
-  <body>
-    <!-- Start Coding Here -->
-  </body>
-</html>
+    <head>
+        <meta charset="UTF-8"/>
+        <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+        <link rel="stylesheet" href="./style.css"/>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+        <title>Acme App</title>
+    </head>
+    <body>
+        <div
+            class="container">
+            <!-- Navbar+Hero Section -->
+            <div class="navbar-hero">
+                <div class="navbar-hero-main">
+                    <div>
+                        <img src="./image.png" alt="logo" width="91.76" height="40">
+                    </div>
+                    <div>
+                        <nav>
+                            <ul class="navbar-hero-horizontal-list">
+                                <li>
+                                    <a href="#">Home</a>
+                                </li>
+                                <li>Feature</li>
+                                <li>Pricing</li>
+                                <li>Contact</li>
+                            </ul>
+                        </nav>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+
+        <div class="hero-section">
+            <div class="hero-section-title">🌈️ Acme Productivity App</div>
+            <div class="hero-section-subtitle">Boost Your
+                <a class="hero-section-title-highlight">Product</a>
+                ivity</div>
+            <div class="hero-section-description">Streamline your workflow with our all-in-one productivity app.</div>
+            <div>
+                <button class="hero-section-button">Start Free Trial</button>
+            </div>
+        </div>
+
+
+        <!-- End Navbar+Hero Section -->
+
+
+
+
+
+
+
+        <!-- Feature Section -->
+        
+
+        <!-- End Feature Section -->
+
+
+
+
+
+
+
+        <!-- Concact Section -->
+
+        <!-- End Concact Section -->
+    </body>
+</html></div></body></html>
