feat: Add feature section with cards for streamlined workflows, performance, and interface

--- a/index.html
+++ b/index.html
@@ -56,7 +56,29 @@
 
 
 
-        <!-- Feature Section -->
+        <section class="feature-section">
+          <div class="feature-card">
+            <div class="feature-icon">🚀</div>
+            <h3 class="feature-title">Streamlined Workflows</h3>
+            <p class="feature-desc">
+              Automate repetitive tasks and focus on high-impact work with our powerful productivity features.
+            </p>
+          </div>
+          <div class="feature-card">
+            <div class="feature-icon">📈</div>
+            <h3 class="feature-title">Blazing Fast Performance</h3>
+            <p class="feature-desc">
+              Experience lightning-fast performance and instant responsiveness with our cutting-edge technology.
+            </p>
+          </div>
+          <div class="feature-card">
+            <div class="feature-icon">😊</div>
+            <h3 class="feature-title">Intuitive Interface</h3>
+            <p class="feature-desc">
+              Our user-friendly interface makes it easy for anyone to streamline their workflow.
+            </p>
+          </div>
+        </section>
         
 
         <!-- End Feature Section -->
